[gd_scene load_steps=2 format=3 uid="uid://biqm56x6ewbmo"]

[ext_resource type="Script" path="res://ui/setting_ui.gd" id="1_05qbb"]

[node name="SettingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05qbb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -95.0
offset_right = 193.0
offset_bottom = 95.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ControlOption" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Control
"

[node name="GraphicOption" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Graphic"

[node name="AudioOption" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Audio"

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -256.0
offset_right = 416.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
tabs_visible = false

[node name="Control" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="TabContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_right = 71.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Control"

[node name="MouseSens" type="Control" parent="TabContainer/Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 64.0
offset_top = 88.0
offset_right = 768.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="TabContainer/Control/MouseSens"]
layout_mode = 0
offset_right = 59.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "Mouse Sensitivity
"

[node name="HSlider" type="HSlider" parent="TabContainer/Control/MouseSens"]
layout_mode = 0
offset_left = 328.0
offset_top = 16.0
offset_right = 704.0
offset_bottom = 32.0

[node name="FOV" type="Control" parent="TabContainer/Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 64.0
offset_top = 152.0
offset_right = 768.0
offset_bottom = 192.0

[node name="Label" type="Label" parent="TabContainer/Control/FOV"]
layout_mode = 0
offset_right = 59.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "FOV"

[node name="HSlider" type="HSlider" parent="TabContainer/Control/FOV"]
layout_mode = 0
offset_left = 328.0
offset_top = 16.0
offset_right = 704.0
offset_bottom = 32.0

[node name="Graphic" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="TabContainer/Graphic"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_right = 71.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Graphic"

[node name="Audio" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_right = 71.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Audio"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 104.0
offset_right = 193.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 30
text = "<< Back"

[connection signal="pressed" from="VBoxContainer/ControlOption" to="." method="_on_control_option_pressed"]
[connection signal="pressed" from="VBoxContainer/GraphicOption" to="." method="_on_graphic_option_pressed"]
[connection signal="pressed" from="VBoxContainer/AudioOption" to="." method="_on_audio_option_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
